maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:10: error: '=>' expected but '=' found.
def trouverBis(i:Int,H:Int,L:Int):() = {
                                     ^ShortestPathMaze:26: error: identifier expected but ';' found.
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^